--- a/_includes/prev_next.html
+++ b/_includes/prev_next.html
@@ -1,9 +1,13 @@
 <div class="previous-next">
-
-  {% if page.next.url %}
-    <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-  {% endif %}
-  {% if page.previous.url %}
-    <a class="previous" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-  {% endif %}
+  <div class="previous-section">
+    {% if page.previous.url %}
+      <a class="previous" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+    {% endif %}
+  </div>
+  
+  <div class="next-section">
+    {% if page.next.url %}
+      <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+    {% endif %}
+  </div>
 </div>
