--- a/_includes/prev_next.html
+++ b/_includes/prev_next.html
@@ -1,13 +1,15 @@
 <div class="previous-next">
-  <div class="previous-section">
-    {% if page.previous.url %}
-      <a class="previous" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-    {% endif %}
-  </div>
-  
+
   <div class="next-section">
     {% if page.next.url %}
       <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
     {% endif %}
   </div>
+  <div></div>
+    <div class="previous-section">
+    {% if page.previous.url %}
+      <a class="previous" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+    {% endif %}
+  </div>
+  
 </div>
