--- a/_includes/prev_next.html
+++ b/_includes/prev_next.html
@@ -2,13 +2,13 @@
 
   <div class="next-section">
     {% if page.next.url %}
-      <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+      <a class="next" href="{{ page.next.url }}"> &laquo;{{ page.next.title }}</a>
     {% endif %}
   </div>
   <div></div>
     <div class="previous-section">
     {% if page.previous.url %}
-      <a class="previous" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+      <a class="previous" href="{{ page.previous.url }}"> {{ page.previous.title }}&raquo;</a>
     {% endif %}
   </div>
   
